<resources>
    <string name="app_name">Spover</string>

    <!-- Overlay -->
    <string name="current_speed">current speed</string>
    <string name="speed_limit">speed limit</string>

    <!-- Permission descriptions -->
    <string name="overlay_permission">Display Spover on top of other apps</string>
    <string name="location_permission">Spover can access your location</string>
    <string name="auto_launch_permission">Spover can read notifications to detect when GMaps is running</string>

    <!-- Toast hints -->
    <string name="toast_overlay_perm_missing">Please allow Spover to draw over other apps</string>
    <string name="toast_no_ui_visible">"All UI elements got disabled, enable showing speed or speed limit first"</string>

    <!-- Card titles-->
    <string name="permissions">Permissions</string>
    <string name="overlay">Overlay</string>
    <string name="warnings">Warnings</string>

    <string name="show_speed_option">Show current speed</string>
    <string name="show_speed_limit">Show speed limit</string>

    <string name="warning_option">Sound alert on speeding</string>
    <string name="et_warning_threshold">Threshold:</string>

    <!-- Shared Preferences-->
    <string name="pref_file_name" translatable="false">pref_file_name</string>
    <string name="pref_show_speed" translatable="false">pref_show_speed</string>
    <string name="pref_show_speed_limit" translatable="false">pref_show_speed_limit</string>
    <string name="pref_overlay_x" translatable="false">pref_overlay_x</string>
    <string name="pref_overlay_y" translatable="false">pref_overlay_y</string>

</resources>
