<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/Card"
            card_view:cardCornerRadius="2dp">

            <LinearLayout style="@style/llCard">

                <TextView
                    style="@style/tvCardCaption"
                    android:text="@string/permissions" />

                <Switch
                    android:id="@+id/switchOverlayPermission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overlay_permission"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/switchLocationPermission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_permission"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/switchNotificationPermission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_launch_permission"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Card"
            card_view:cardCornerRadius="2dp">

            <LinearLayout style="@style/llCard">

                <Button
                    android:id="@+id/btnOverlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:text="@string/show_overlay"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Card"
            card_view:cardCornerRadius="2dp">

            <LinearLayout style="@style/llCard">

                <TextView
                    style="@style/tvCardCaption"
                    android:text="@string/overlay" />

                <Switch
                    android:id="@+id/switchShowSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_speed_option"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/switchShowSpeedLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_speed_limit"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Card"
            card_view:cardCornerRadius="2dp">

            <LinearLayout style="@style/llCard">

                <TextView
                    style="@style/tvCardCaption"
                    android:text="@string/warnings" />

                <Switch
                    android:id="@+id/switchSoundAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/warning_option"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/et_warning_threshold"
                        android:textColor="@color/colorText"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etWarningThreshold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:hint="10km/h"
                        android:inputType="numberSigned" />
                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Card"
            card_view:cardCornerRadius="2dp">

            <LinearLayout style="@style/llCard">

                <Button
                    android:id="@+id/btnOfflineAreas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/select_offline_map" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
